--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 					</div>
 				</section>
 				<!-- SLIDE 2-->
-				<section data-background-video="media/mp4/123.mp4" data-background-video-loop>
-					<section>
+				<section>
+					<section data-background-video="media/mp4/123.mp4" data-background-video-loop data-background-size="1080p">
 						<h1>Kelompok 4</h1>
 					</section>
-					<section>
+					<section data-background-video="media/mp4/123.mp4" data-background-video-loop data-background-size="1080p">
 						<h2>Andifa</h2>
 					</section>
-					<section>
+					<section data-background-video="media/mp4/123.mp4" data-background-video-loop data-background-size="1080p">
 						<h2>Panji</h2>
 					</section>
-					<section>
+					<section data-background-video="media/mp4/123.mp4" data-background-video-loop data-background-size="1080p">
 						<h2>Sonia</h2>
 					</section>
 				</section>
@@ -68,7 +68,7 @@
 							<div class="row"></div>
 							<div class="row">
 								<div class="col"></div>
-								<div class="shadow-lg col-lg-8 bg-light bg-gradient rounded-pill">
+								<div class="opacity-75 shadow-lg col-lg-8 container-fluid bg-light bg-gradient rounded-circle">
 									<h2>Apa itu Konten?</h2>
 									<figure class="text-center">
 										<blockquote class="blockquote">
@@ -104,7 +104,7 @@
 							<div class="row"></div>
 							<div class="row">
 								<div class="col"></div>
-								<div class="shadow-lg col-lg-8 bg-light bg-gradient rounded-pill">
+								<div class="opacity-75 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
 									<h2>Apa Saja Konten itu?</h2>
 									<ul class="list-group list-group-horizontal">
 										<li class="list-group-item">Kultur</li>
@@ -129,21 +129,260 @@
 								</div>
 								<div class="col"></div>
 							</div>
+							<div class="row"></div>
 						</div>
 					</section>
-					<section>
+					<section data-background-image="media/img/marketing/1.jpg">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
 								<div class="col"></div>
-								<div class="shadow-lg col-lg-8 bg-light bg-gradient rounded-pill">
+								<div class="opacity-75 shadow-lg col-lg-6 container-fluid bg-white rounded-pill">
 									<h2>Apa itu Marketing?</h2>
 								</div>
+								<div class="col"></div>
+							</div>
+						</div>
+					</section>
+					<section data-background-image="media/img/marketing/1.jpg">
+						<div class="container-fluid">
+							<div class="row"></div>
+							<div class="row">
+								<div class="col"></div>
+								<div class="opacity-75 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
+									<h2>Marketing</h4>
+									<p>Marketing adalah adalah aktivitas, set dan proses untuk menciptakan, berkomunikasi, menyampaikan dan bertukar penawaran yang memiliki nilai bagi pelanggannya, klien, rekan dan masyarakat pada umumnya</p>
+								</div>
+								<div class="col"></div>
+							</div>
+							<div class="row"></div>
+						</div>
+					</section>
+					<section data-background-image="media/img/marketing/1.jpg">
+						<div class="container-fluid">
+							<div class="row"></div>
+							<div class="row">
+								<div class="col"></div>
+								<div class="opacity-75 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
+									<h2>Jenis Jenis Marketing</h4>
+								</div>
+								<div class="col"></div>
+							</div>
+							<div class="row"></div>
+						</div>
+					</section>
+					<section data-background-image="media/img/marketing/2.jpg"></section>
+					<section data-background-image="media/img/marketing/2.jpg">
+						<div class="container-fluid">
+							<div class="row"></div>
+							<div class="row">
+								<div class="col"></div>
+								<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
+									<h2>Influencer Marketing</h2>
+									<hr>
+									<p class="text-start text-wrap">Marketing ini berfokus pada memanfaatkan seorang individu yang memiliki pengaruh terhadap khalayak umum untuk menciptakan brand di pasar yang lebih besar. Dengan ini brand akan dikenalkan oleh para influencers (selebriti, content creators, karyawan dll) </p>
+									<hr>
+								</div>
+								<div class="col"></div>
+							</div>
+						</div>
+					</section>
+					<section data-background-image="media/img/marketing/3.jpg"></section>
+					<section data-background-image="media/img/marketing/3.jpg">
+						<div class="container-fluid">
+							<div class="row"></div>
+							<div class="row">
+								<div class="col"></div>
+								<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
+									<h2>Relationship Marketing</h2>
+									<hr>
+									<p class="text-start text-wrap">Marketing ini berfokus pada pada database marketing, pemasaran berdarkan pola perilaku, analisa terhada target konsumer lebih tepat dan menciptakan programs loyalty</p>
+									<hr>
+								</div>
+								<div class="col"></div>
+							</div>
+						</div>
+					</section>
+					<section data-background-video="media/mp4/marketing-1.mp4" data-background-video-loop data-background-size="1080p"></section>
+					<section data-background-video="media/mp4/marketing-1.mp4" data-background-video-loop data-background-video-muted data-background-size="1080p">
+						<div class="container-fluid">
+							<div class="row"></div>
+							<div class="row">
+								<div class="col"></div>
+								<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
+									<h2>Viral Marketing</h2>
+									<hr>
+									<video data-autoplay data-ignore src="media/mp4/marketing-1.mp4"></video>
+									<p class="text-start text-wrap">Marketing fenomenal yang menciptakan exposure yang besar dengan memanfaatkan konten viral yang sudah ada dan menyebar seperti virus dalam waktu jangka pendek tetapi sangat cepat</p>
+									<hr>
+								</div>
+								<div class="col"></div>
+							</div>
+						</div>
+					</section>
+					<section data-background-image="media/img/marketing/5i.png"></section>
+					<section data-background-image="media/img/marketing/5i.png">
+						<div class="container-fluid">
+							<div class="row"></div>
+							<div class="row">
+								<div class="col"></div>
+								<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
+									<h2>Keyword Marketing</h2>
+									<hr>
+									<p class="text-start text-wrap">Memanfaatkan keyword atau kata kunci dalam marketingnya dengan tujuan mendapatkan customer yangs sesuai dan tepat sasaran</p>
+									<hr>
+								</div>
+								<div class="col"></div>
+							</div>
+						</div>
+					</section>
+					<section data-background-image="media/img/marketing/6.jpeg"></section>
+					<section data-background-image="media/img/marketing/6.jpeg">
+						<div class="container-fluid">
+							<div class="row"></div>
+							<div class="row">
+								<div class="col"></div>
+								<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
+									<h2>Marketing Gerilya</h2>
+									<hr>
+									<p class="text-start text-wrap">Marketing Gerilya adalah taktik marketing dimana perusahaan menggunakan kejutan dan interaksi nonkonvensional produk atau layanan mereka</p>
+									<hr>
+								</div>
+								<div class="col"></div>
+							</div>
+						</div>
+					</section>
+					<section data-background-video="media/mp4/marketing-2.mp4" data-background-video-loop data-background-size="1080p"></section>
+					<section data-background-video="media/mp4/marketing-2.mp4" data-background-video-loop data-background-video-muted data-background-size="1080p">
+						<div class="container-fluid">
+							<div class="row"></div>
+							<div class="row">
+								<div class="col"></div>
+								<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
+									<h2>Outbond Marketing</h2>
+									<hr>
+									<video data-autoplay data-ignore src="media/mp4/marketing-2.mp4"></video>
+									<p class="text-start text-wrap">Meningkatkan exposure dari sebuah produk dengan mempromosikannya lewat Televisi, Radio dan Alat Digital lainnya untuk meningkatkan nilai kesadaran terhadap produk pada masyarakat.</p>
+									<hr>
+								</div>
+								<div class="col"></div>
+							</div>
+						</div>
+					</section>
+					<section data-background-image="media/img/marketing/7.jpg">
+						<div class="container-fluid">
+							<div class="row"></div>
+							<div class="row">
+								<div class="col"></div>
+								<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
+									<h2>Inbound</h2>
+									<hr>
+									<p class="text-start text-wrap">Marketing Inbound adalah mmeningkatkan exposure dengan menggunakan berbagai metode dari pihak pertama seperti email, mengadakan events dan web desain</p>
+									<hr>
+								</div>
+								<div class="col"></div>
 							</div>
 						</div>
 					</section>
 				</section>
 				<!-- SLIDE 4-->
+				<!-- 					
+					<section data-background-video="media/mp4/marketing-2.mp4" data-background-video-loop data-background-size="1080p"></section>
+					<section data-background-video="media/mp4/marketing-2.mp4" data-background-video-loop data-background-video-muted data-background-size="1080p">
+						<div class="container-fluid">
+							<div class="row"></div>
+							<div class="row">
+								<div class="col"></div>
+								<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
+									<h2>Outbond Marketing</h2>
+									<hr>
+									<video data-autoplay data-ignore src="media/mp4/marketing-2.mp4"></video>
+									<p class="text-start text-wrap">Meningkatkan exposure dari sebuah produk dengan mempromosikannya lewat Televisi, Radio dan Alat Digital lainnya untuk meningkatkan nilai kesadaran terhadap produk pada masyarakat.</p>
+									<hr>
+								</div>
+								<div class="col"></div>
+							</div>
+						</div>
+					</section>
+					<section data-background-image="media/img/marketing/6.jpeg"></section>
+					<section data-background-image="media/img/marketing/6.jpeg">
+						<div class="container-fluid">
+							<div class="row"></div>
+							<div class="row">
+								<div class="col"></div>
+								<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
+									<h2>Marketing Gerilya</h2>
+									<hr>
+									<p class="text-start text-wrap">Marketing Gerilya adalah taktik marketing dimana perusahaan menggunakan kejutan dan interaksi nonkonvensional produk atau layanan mereka</p>
+									<hr>
+								</div>
+								<div class="col"></div>
+							</div>
+						</div>
+					</section>
+				-->
+				<section>
+					<section data-background-image="media/img/contentmarketing/1.jpg">
+						<div class="container-fluid">
+							<div class="row"></div>
+							<div class="row">
+								<div class="col"></div>
+								<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
+									<h1>Lalu apa itu Content Market?</h1>
+								</div>
+								<div class="col"></div>
+							</div>
+						</div>
+					</section>
+					<section data-background-video="media/mp4/marketing-3.mp4" data-background-video-loop data-background-size="1080p"></section>
+					<section data-background-video="media/mp4/marketing-3.mp4" data-background-video-loop data-background-video-muted data-background-size="1080p">
+						<div class="container-fluid">
+							<div class="row"></div>
+							<div class="row">
+								<div class="col"></div>
+								<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
+									<h2>Content Market</h2>
+									<hr>
+									<video data-autoplay data-ignore src="media/mp4/marketing-3.mp4"></video>
+									<p class="text-start text-wrap">Content Market adalah tempat yang digunakan untuk menunjukkan, mengomunikasikan suatu konten atau produk untuk menarik perhatian para audience</p>
+									<hr>
+								</div>
+								<div class="col"></div>
+							</div>
+						</div>
+					</section>
+					<section data-background-video="media/mp4/marketing-4.mp4" data-background-video-loop data-background-video-muted data-background-size="1080p">
+						<div class="container-fluid">
+							<div class="row"></div>
+							<div class="row">
+								<div class="col"></div>
+								<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
+									<h2>Sebentar, bukan Content Marketing?</h2>
+									<hr>
+									<video data-autoplay data-ignore src="media/mp4/marketing-4.mp4"></video>
+									<p class="text-start text-wrap"></p>
+									<hr>
+								</div>
+								<div class="col"></div>
+							</div>
+						</div>
+					</section>
+					<section data-background-video="media/mp4/marketing-4.mp4" data-background-video-loop data-background-video-muted data-background-size="1080p">
+							<div class="container-fluid">
+								<div class="row"></div>
+								<div class="row">
+									<div class="col"></div>
+									<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
+										<h2>Bukan</h2>
+										<hr>
+										<p class="text-start text-wrap">Content Marketing adalah Sebuah setrategi marketing / penjualan dalam membuat dana menyebarkan konten yang berharga, relevan dan konsistent untuk menarik perhatian para audience yang di tuju</p>
+										<hr>
+									</div>
+									<div class="col"></div>
+								</div>
+							</div>
+					</section>
+				</section>
 				<section>
 					<h1>Perkembangan Content Marketing</h1>
 				</section>
