--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<title>Content Market - Kelompok 4</title>
 
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
+		<link rel="stylesheet" href="../Kelompok-4/dist/reset.css">
+		<link rel="stylesheet" href="../Kelompok-4/dist/reveal.css">
 		<!-- beige -->
-		<link rel="stylesheet" href="dist/theme/beige.css">
-		<link rel="stylesheet" href="css/master.css">
-		<link rel="stylesheet" href="css/title-footer.css">
-		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="../Kelompok-4/dist/theme/beige.css">
+		<link rel="stylesheet" href="../Kelompok-4/css/master.css">
+		<link rel="stylesheet" href="../Kelompok-4/css/title-footer.css">
+		<link rel="stylesheet" href="../Kelompok-4/css/bootstrap.css">
 		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+		<link rel="stylesheet" href="../Kelompok-4/plugin/highlight/monokai.css">
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
 				<!-- SLIDE 1-->
-				<section data-background-image="media/img/1/1.jpg" data-background-interactive>
+				<section data-background-image="../Kelompok-4/media/img/1/1.jpg" data-background-interactive>
 					<div class="container-fluid">
 						<div class="row"></div>
 						<div class="row">
@@ -36,22 +36,22 @@
 				</section>
 				<!-- SLIDE 2-->
 				<section>
-					<section data-background-video="media/mp4/123.mp4" data-background-video-loop data-background-size="1080p">
+					<section data-background-video="../Kelompok-4/media/mp4/123.mp4" data-background-video-loop data-background-size="1080p">
 						<h1>Kelompok 4</h1>
 					</section>
-					<section data-background-video="media/mp4/123.mp4" data-background-video-loop data-background-size="1080p">
+					<section data-background-video="../Kelompok-4/media/mp4/123.mp4" data-background-video-loop data-background-size="1080p">
 						<h2>Andifa</h2>
 					</section>
-					<section data-background-video="media/mp4/123.mp4" data-background-video-loop data-background-size="1080p">
+					<section data-background-video="../Kelompok-4/media/mp4/123.mp4" data-background-video-loop data-background-size="1080p">
 						<h2>Panji</h2>
 					</section>
-					<section data-background-video="media/mp4/123.mp4" data-background-video-loop data-background-size="1080p">
+					<section data-background-video="../Kelompok-4/media/mp4/123.mp4" data-background-video-loop data-background-size="1080p">
 						<h2>Sonia</h2>
 					</section>
 				</section>
 				<!-- SLIDE 3-->
 				<section>
-					<section data-background-image="media/img/1/2.jpg">
+					<section data-background-image="../Kelompok-4/media/img/1/2.jpg">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
@@ -63,7 +63,7 @@
 							</div>
 						</div>
 					</section>
-					<section data-background-image="media/img/konten/1.jpg">
+					<section data-background-image="../Kelompok-4/media/img/konten/1.jpg">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
@@ -99,7 +99,7 @@
 							</div>
 						</div>
 					</section>
-					<section data-background-image="media/img/konten/2.jpg">
+					<section data-background-image="../Kelompok-4/media/img/konten/2.jpg">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
@@ -132,7 +132,7 @@
 							<div class="row"></div>
 						</div>
 					</section>
-					<section data-background-image="media/img/marketing/1.jpg">
+					<section data-background-image="../Kelompok-4/media/img/marketing/1.jpg">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
@@ -144,7 +144,7 @@
 							</div>
 						</div>
 					</section>
-					<section data-background-image="media/img/marketing/1.jpg">
+					<section data-background-image="../Kelompok-4/media/img/marketing/1.jpg">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
@@ -158,7 +158,7 @@
 							<div class="row"></div>
 						</div>
 					</section>
-					<section data-background-image="media/img/marketing/1.jpg">
+					<section data-background-image="../Kelompok-4/media/img/marketing/1.jpg">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
@@ -171,8 +171,8 @@
 							<div class="row"></div>
 						</div>
 					</section>
-					<section data-background-image="media/img/marketing/2.jpg"></section>
-					<section data-background-image="media/img/marketing/2.jpg">
+					<section data-background-image="../Kelompok-4/media/img/marketing/2.jpg"></section>
+					<section data-background-image="../Kelompok-4/media/img/marketing/2.jpg">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
@@ -187,8 +187,8 @@
 							</div>
 						</div>
 					</section>
-					<section data-background-image="media/img/marketing/3.jpg"></section>
-					<section data-background-image="media/img/marketing/3.jpg">
+					<section data-background-image="../Kelompok-4/media/img/marketing/3.jpg"></section>
+					<section data-background-image="../Kelompok-4/media/img/marketing/3.jpg">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
@@ -203,8 +203,8 @@
 							</div>
 						</div>
 					</section>
-					<section data-background-video="media/mp4/marketing-1.mp4" data-background-video-loop data-background-size="1080p"></section>
-					<section data-background-video="media/mp4/marketing-1.mp4" data-background-video-loop data-background-video-muted data-background-size="1080p">
+					<section data-background-video="../Kelompok-4/media/mp4/marketing-1.mp4" data-background-video-loop data-background-size="1080p"></section>
+					<section data-background-video="../Kelompok-4/media/mp4/marketing-1.mp4" data-background-video-loop data-background-video-muted data-background-size="1080p">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
@@ -212,7 +212,7 @@
 								<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
 									<h2>Viral Marketing</h2>
 									<hr>
-									<video data-autoplay data-ignore src="media/mp4/marketing-1.mp4"></video>
+									<video data-autoplay data-ignore src="../Kelompok-4/media/mp4/marketing-1.mp4"></video>
 									<p class="text-start text-wrap">Marketing fenomenal yang menciptakan exposure yang besar dengan memanfaatkan konten viral yang sudah ada dan menyebar seperti virus dalam waktu jangka pendek tetapi sangat cepat</p>
 									<hr>
 								</div>
@@ -220,8 +220,8 @@
 							</div>
 						</div>
 					</section>
-					<section data-background-image="media/img/marketing/5i.png"></section>
-					<section data-background-image="media/img/marketing/5i.png">
+					<section data-background-image="../Kelompok-4/media/img/marketing/5i.png"></section>
+					<section data-background-image="../Kelompok-4/media/img/marketing/5i.png">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
@@ -236,8 +236,8 @@
 							</div>
 						</div>
 					</section>
-					<section data-background-image="media/img/marketing/6.jpeg"></section>
-					<section data-background-image="media/img/marketing/6.jpeg">
+					<section data-background-image="../Kelompok-4/media/img/marketing/6.jpeg"></section>
+					<section data-background-image="../Kelompok-4/media/img/marketing/6.jpeg">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
@@ -252,8 +252,8 @@
 							</div>
 						</div>
 					</section>
-					<section data-background-video="media/mp4/marketing-2.mp4" data-background-video-loop data-background-size="1080p"></section>
-					<section data-background-video="media/mp4/marketing-2.mp4" data-background-video-loop data-background-video-muted data-background-size="1080p">
+					<section data-background-video="../Kelompok-4/media/mp4/marketing-2.mp4" data-background-video-loop data-background-size="1080p"></section>
+					<section data-background-video="../Kelompok-4/media/mp4/marketing-2.mp4" data-background-video-loop data-background-video-muted data-background-size="1080p">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
@@ -261,7 +261,7 @@
 								<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
 									<h2>Outbond Marketing</h2>
 									<hr>
-									<video data-autoplay data-ignore src="media/mp4/marketing-2.mp4"></video>
+									<video data-autoplay data-ignore src="../Kelompok-4/media/mp4/marketing-2.mp4"></video>
 									<p class="text-start text-wrap">Meningkatkan exposure dari sebuah produk dengan mempromosikannya lewat Televisi, Radio dan Alat Digital lainnya untuk meningkatkan nilai kesadaran terhadap produk pada masyarakat.</p>
 									<hr>
 								</div>
@@ -269,7 +269,7 @@
 							</div>
 						</div>
 					</section>
-					<section data-background-image="media/img/marketing/7.jpg">
+					<section data-background-image="../Kelompok-4/media/img/marketing/7.jpg">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
@@ -322,7 +322,7 @@
 					</section>
 				-->
 				<section>
-					<section data-background-image="media/img/contentmarketing/1.jpg">
+					<section data-background-image="../Kelompok-4/media/img/contentmarketing/1.jpg">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
@@ -334,8 +334,8 @@
 							</div>
 						</div>
 					</section>
-					<section data-background-video="media/mp4/marketing-3.mp4" data-background-video-loop data-background-size="1080p"></section>
-					<section data-background-video="media/mp4/marketing-3.mp4" data-background-video-loop data-background-video-muted data-background-size="1080p">
+					<section data-background-video="../Kelompok-4/media/mp4/marketing-3.mp4" data-background-video-loop data-background-size="1080p"></section>
+					<section data-background-video="../Kelompok-4/media/mp4/marketing-3.mp4" data-background-video-loop data-background-video-muted data-background-size="1080p">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
@@ -343,7 +343,7 @@
 								<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
 									<h2>Content Market</h2>
 									<hr>
-									<video data-autoplay data-ignore src="media/mp4/marketing-3.mp4"></video>
+									<video data-autoplay data-ignore src="../Kelompok-4/media/mp4/marketing-3.mp4"></video>
 									<p class="text-start text-wrap">Content Market adalah tempat yang digunakan untuk menunjukkan, mengomunikasikan suatu konten atau produk untuk menarik perhatian para audience</p>
 									<hr>
 								</div>
@@ -351,7 +351,7 @@
 							</div>
 						</div>
 					</section>
-					<section data-background-video="media/mp4/marketing-4.mp4" data-background-video-loop data-background-video-muted data-background-size="1080p">
+					<section data-background-video="../Kelompok-4/media/mp4/marketing-4.mp4" data-background-video-loop data-background-video-muted data-background-size="1080p">
 						<div class="container-fluid">
 							<div class="row"></div>
 							<div class="row">
@@ -359,7 +359,7 @@
 								<div class="opacity-50 shadow-lg col-lg-6 container-fluid bg-white rounded-3">
 									<h2>Sebentar, bukan Content Marketing?</h2>
 									<hr>
-									<video data-autoplay data-ignore src="media/mp4/marketing-4.mp4"></video>
+									<video data-autoplay data-ignore src="../Kelompok-4/media/mp4/marketing-4.mp4"></video>
 									<p class="text-start text-wrap"></p>
 									<hr>
 								</div>
@@ -367,7 +367,7 @@
 							</div>
 						</div>
 					</section>
-					<section data-background-video="media/mp4/marketing-4.mp4" data-background-video-loop data-background-video-muted data-background-size="1080p">
+					<section data-background-video="../Kelompok-4/media/mp4/marketing-4.mp4" data-background-video-loop data-background-video-muted data-background-size="1080p">
 							<div class="container-fluid">
 								<div class="row"></div>
 								<div class="row">
@@ -388,12 +388,12 @@
 				</section>
 			</div>
 		</div>
-		<script src="node_modules/reveal.js-menu/menu.js"></script>
-		<script src="dist/reveal.js"></script>
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
-		<script src="js/bootstrap.bundle.js"></script>
+		<script src="../Kelompok-4/node_modules/reveal.js-menu/menu.js"></script>
+		<script src="../Kelompok-4/dist/reveal.js"></script>
+		<script src="../Kelompok-4/plugin/notes/notes.js"></script>
+		<script src="../Kelompok-4/plugin/markdown/markdown.js"></script>
+		<script src="../Kelompok-4/plugin/highlight/highlight.js"></script>
+		<script src="../Kelompok-4/js/bootstrap.bundle.js"></script>
 		<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
@@ -407,7 +407,7 @@
 				hash: true,
 				dependencies:
 				[
-					{ src: 'plugin/title-footer/title-footer.js', async: true, callback: function() { title_footer.initialize();}}
+					{ src: '../Kelompok-4/plugin/title-footer/title-footer.js', async: true, callback: function() { title_footer.initialize();}}
 				],
 				disableLayout: false,
 				overview: false,
@@ -447,6 +447,7 @@
 					RevealMenu
 				],
 			});
+			Reveal.sync();
 			Reveal.configure({ 
 				showNotes: 'separate-page',
 				pdfMaxPagesPerSlide: 1
